--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -7,12 +7,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import re\n",
-    "import json\n",
+    "# https://huggingface.co/MediaTek-Research/Llama-Breeze2-8B-Instruct\n",
+    "\n",
     "import torch\n",
-    "from transformers.models.qwen2.modeling_qwen2 import Qwen2ForCausalLM\n",
-    "from transformers.models.qwen2.tokenization_qwen2_fast import Qwen2TokenizerFast\n",
-    "from transformers import BitsAndBytesConfig"
+    "from transformers import AutoModel, AutoTokenizer\n",
+    "from transformers import GenerationConfig\n",
+    "from mtkresearch.llm.prompt import MRPromptV3"
    ]
   },
   {
@@ -22,35 +22,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "MODEL_ID = \"Qwen/Qwen2.5-7B-Instruct\"\n",
+    "model_id = 'MediaTek-Research/Llama-Breeze2-8B-Instruct-v0_1'\n",
     "\n",
-    "print(f\"載入模型: {MODEL_ID} ...\")\n",
+    "model = AutoModel.from_pretrained(\n",
+    "    model_id,\n",
+    "    torch_dtype=torch.bfloat16,\n",
+    "    low_cpu_mem_usage=True,\n",
+    "    trust_remote_code=True,\n",
+    "    device_map='auto',\n",
+    "    img_context_token_id=128212\n",
+    ").eval()\n",
     "\n",
-    "bnb_config = BitsAndBytesConfig(\n",
-    "    load_in_4bit=True,\n",
-    "    bnb_4bit_compute_dtype=torch.float16,\n",
-    "    bnb_4bit_quant_type=\"nf4\",\n",
-    "    bnb_4bit_use_double_quant=True\n",
+    "tokenizer = AutoTokenizer.from_pretrained(model_id, trust_remote_code=True, use_fast=False)\n",
+    "\n",
+    "generation_config = GenerationConfig(\n",
+    "  max_new_tokens=2048,\n",
+    "  do_sample=True,\n",
+    "  temperature=0.01,\n",
+    "  top_p=0.01,\n",
+    "  repetition_penalty=1.1,\n",
+    "  eos_token_id=128009\n",
     ")\n",
     "\n",
-    "try:\n",
-    "    tokenizer = Qwen2TokenizerFast.from_pretrained(MODEL_ID)\n",
-    "    model = Qwen2ForCausalLM.from_pretrained(\n",
-    "        MODEL_ID,\n",
-    "        device_map=\"auto\",\n",
-    "        quantization_config=bnb_config,\n",
-    "        trust_remote_code=True\n",
-    "    )\n",
-    "    print(\"模型成功載入\")\n",
-    "    \n",
-    "    # 測試一段話\n",
-    "    input_text = \"你好，請問你能聽到我說話嗎？\"\n",
-    "    inputs = tokenizer(input_text, return_tensors=\"pt\").to(\"cuda\")\n",
-    "    outputs = model.generate(**inputs, max_new_tokens=20)\n",
-    "    print(tokenizer.decode(outputs[0], skip_special_tokens=True))\n",
+    "prompt_engine = MRPromptV3()\n",
     "\n",
-    "except Exception as e:\n",
-    "    print(f\"錯誤: {e}\")"
+    "sys_prompt = 'You are a helpful AI assistant built by MediaTek Research. The user you are helping speaks Traditional Chinese and comes from Taiwan.'\n",
+    "\n",
+    "def _inference(tokenizer, model, generation_config, prompt, pixel_values=None):\n",
+    "    inputs = tokenizer(prompt, return_tensors=\"pt\").to(model.device)\n",
+    "    if pixel_values is None:\n",
+    "        output_tensors = model.generate(**inputs, generation_config=generation_config)\n",
+    "    else:\n",
+    "        output_tensors = model.generate(**inputs, generation_config=generation_config, pixel_values=pixel_values.to(model.device, dtype=model.dtype))\n",
+    "    output_str = tokenizer.decode(output_tensors[0])\n",
+    "    return output_str"
    ]
   },
   {
@@ -124,45 +129,15 @@
     "    \"\"\"\n",
     "\n",
     "    user_prompt = f\"評論內容：{text}\"\n",
-    "\n",
-    "    messages = [\n",
+    "    conversations = [\n",
     "        {\"role\": \"system\", \"content\": system_prompt},\n",
     "        {\"role\": \"user\", \"content\": user_prompt}\n",
     "    ]\n",
     "\n",
-    "    # 格式化輸入\n",
-    "    text_input = tokenizer.apply_chat_template(\n",
-    "        messages, \n",
-    "        tokenize=False, \n",
-    "        add_generation_prompt=True\n",
-    "    )\n",
-    "    \n",
-    "    model_inputs = tokenizer([text_input], return_tensors=\"pt\").to(model.device)\n",
-    "\n",
-    "    # 生成回應\n",
-    "    with torch.no_grad():\n",
-    "        generated_ids = model.generate(\n",
-    "            **model_inputs,\n",
-    "            max_new_tokens=512,\n",
-    "            temperature=0.1,     # 降低隨機性，讓輸出格式穩定\n",
-    "            top_p=0.9,\n",
-    "            repetition_penalty=1.05 # 避免模型卡死在某個符號\n",
-    "        )\n",
-    "\n",
-    "    # 取得生成的片段\n",
-    "    input_len = model_inputs.input_ids.shape[1]\n",
-    "    response = tokenizer.decode(generated_ids[0][input_len:], skip_special_tokens=True)\n",
-    "    \n",
-    "    try:\n",
-    "        # 使用正則表達式尋找第一個 { 和最後一個 } 之間的內容\n",
-    "        match = re.search(r'\\{.*\\}', response, re.DOTALL)\n",
-    "        if match:\n",
-    "            clean_json = match.group(0)\n",
-    "            return json.loads(clean_json)\n",
-    "        else:\n",
-    "            return {\"error\": \"No JSON found\", \"raw\": response}\n",
-    "    except Exception as e:\n",
-    "        return {\"error\": str(e), \"raw\": response}"
+    "    prompt = prompt_engine.get_prompt(conversations)\n",
+    "    output_str = _inference(tokenizer, model, generation_config, prompt)\n",
+    "    result = prompt_engine.parse_generated_str(output_str)\n",
+    "    return result"
    ]
   },
   {
@@ -187,8 +162,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "torch_222",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.19"
   }
  },
  "nbformat": 4,
